# bug-triage-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: config.py  main.py
src/agents/: bug_reproducer.py  code_locator.py  fix_generator.py  issue_analyzer.py
src/core/: agent_base.py  coordinator.py  state.py
src/tools/: code_analyzer.py  code_analyzer_js.py  file_system.py  github_client.py  test_runner.py
src/web/: api.py  app.py  schemas.py  task_manager.py  ws.py
src/web/static/: index.html
tests/: conftest.py
tests/test_core/: test_agent_base.py  test_state.py
tests/test_tools/: test_code_analyzer.py  test_code_analyzer_js.py  test_file_system.py  test_github_client.py  test_test_runner.py
